consumer & publisher added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+
+spring.port = 8090
+spring.rabbitmq.host = localhost\
+spring.rabbitmq.port = 15672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
+
+order-queue = ${ORDER_QUEUE : order-queue}
+order-exchange = ${ORDER_EXCHANGE : order-exchange}
+order-routing-key =${ORDER_ROUTING_KEY: order-routing-key}
